# nixities

./: Makefile  README.md  flake.nix  justfile
.github/workflows/: ci.yaml
devenv/templates/elm/: .gitignore  devenv.nix  flake.nix  justfile  tailwind.config.js
devenv/templates/go/: devenv.nix  flake.nix  justfile
devenv/templates/haskell/: devenv.nix  flake.nix  justfile  stack.yaml
devenv/templates/jupyter/: flake.nix  justfile
devenv/templates/microvm/: flake.nix  justfile
devenv/templates/nixity/: devenv.nix  devenv.yaml  flake.nix  justfile
devenv/templates/nixos-container/: flake.nix  justfile
devenv/templates/oci-container/: .gitignore  flake.nix  justfile
devenv/templates/python/: Justfile  devenv.nix  flake.nix
devenv/templates/python-venv/: flake.nix
devenv/templates/rust/: .gitignore  devenv.nix  (+2 more)
devenv/templates/webapp/backend/: .gitignore  Cargo.toml  default.nix  devenv.nix  justfile
devenv/templates/webapp/backend/migrations/: 20240510230320_create_users.sql  20240510230320_sample.sql
devenv/templates/webapp/backend/src/: db.rs  errors.rs  lib.rs  main.rs  users.rs  version.rs
shells/clang/: default.nix
shells/containerd-wasm-shims/: default.nix
shells/generic-dev/: default.nix
shells/onnx/: default.nix
shells/php/: default.nix
shells/php-wasi/: default.nix
shells/php-wasi-sdk-19/: default.nix
shells/php-wasi-sdk-20/: default.nix
shells/rustc/: default.nix
shells/wasi-libc/: default.nix
shells/wasi-sdk/: default.nix
shells/wasi-vfs/: default.nix
shells/wasm/: default.nix
shells/zig/: default.nix
(+34 files in other folders)
