[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openapi-spec"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
uuid = { version = "1", features = ["v4"] }